--- a/cmd/web/resource/template/page/index.html
+++ b/cmd/web/resource/template/page/index.html
@@ -1,48 +1,47 @@
 {{define "page/index"}}
 {{template "common/header" .}}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">开源持续交付系统</h1>
-    <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由 Go 开发的持续交付系统，易安装、跨平台
-        、轻量级。永久免费开源。是中小公司、工作室项目交付不二选择，居家旅行写代码的必备产品。</p>
+    <h1 class="display-4">{{T .Localizer "nocd_desc" nil}}</h1>
+    <p class="lead">{{T .Localizer "nocd_desc_long" nil|unsafe}}</p>
 </div>
 <div class="container">
     <div class="card-deck mb-3 text-center">
         <div class="card mb-4 box-shadow">
             <div class="card-header">
-                <h4 class="my-0 font-weight-normal">易安装</h4>
+                <h4 class="my-0 font-weight-normal">{{T .Localizer "easy_to_install" nil}}</h4>
             </div>
             <div class="card-body">
-                <h1 class="card-title pricing-card-title">二进制
-                    <small class="text-muted">部署</small>
+                <h1 class="card-title pricing-card-title">
+                    {{T .Localizer "binary_deployment" nil|unsafe}}
                 </h1>
                 <p class="text-left mt-3 mb-4">
-                    您除了可以根据操作系统平台下载 二进制运行，还可以通过 Docker 或 Vagrant，以及 包管理 安装。
+                    {{T .Localizer "binary_deployment_long" nil}}
                 </p>
             </div>
         </div>
         <div class="card mb-4 box-shadow">
             <div class="card-header">
-                <h4 class="my-0 font-weight-normal">跨平台</h4>
+                <h4 class="my-0 font-weight-normal">{{T .Localizer "cross_platform" nil}}</h4>
             </div>
             <div class="card-body">
-                <h1 class="card-title pricing-card-title">跨平台
-                    <small class="text-muted">编译</small>
+                <h1 class="card-title pricing-card-title">
+                    {{T .Localizer "cross_platform_desc" nil | unsafe}}
                 </h1>
                 <p class="text-left mt-3 mb-4">
-                    任何 Go 语言 支持的平台都可以运行 NoCD，包括 Windows、Mac、Linux 以及 ARM。
+                    {{T .Localizer "cross_platform_desc_long" nil}}
                 </p>
             </div>
         </div>
         <div class="card mb-4 box-shadow">
             <div class="card-header">
-                <h4 class="my-0 font-weight-normal">轻量级</h4>
+                <h4 class="my-0 font-weight-normal">{{T .Localizer "lightweight" nil}}</h4>
             </div>
             <div class="card-body">
-                <h1 class="card-title pricing-card-title">树莓派
-                    <small class="text-muted">足矣</small>
+                <h1 class="card-title pricing-card-title">
+                    {{T .Localizer "lightweight_desc" nil | unsafe}}
                 </h1>
                 <p class="text-left mt-3 mb-4">
-                    一个廉价的树莓派的配置足以满足 NoCD 的最低系统硬件要求。甚至可以运行在 NAS 设备上。
+                    {{T .Localizer "lightweight_desc_long" nil}}
                 </p>
             </div>
         </div>
